autoformat code, remove CSound references